objects/UNITY_Template_Configuration__c.object
<CustomObject>
    <description>UNITY object</description>
    <fields>
        <fullName>UNITY_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Templates Configuration</relationshipLabel>
        <relationshipName>Templates_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Applicable_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Define a template configuration for this child node. If provided, template would be recursively applied to this child object when created.</description>
        <label>Applicable Template</label>
        <referenceTo>UNITY_Template_Configuration__c</referenceTo>
        <relationshipLabel>Templates Configuration (Applicable Template)</relationshipLabel>
        <relationshipName>Templates_Configuration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Node_Type__c</fullName>
        <label>Node Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Node_Value__c</fullName>
        <label>Node Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Part_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Templates Configuration</relationshipLabel>
        <relationshipName>Templates_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Product_Activity_Type__c</fullName>
        <label>Product Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UNITY_Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Sublabor - New Construction</fullName>
                </value>
                <value>
                    <fullName>Sublabor - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
                <value>
                    <fullName>Labor - Installation</fullName>
                </value>
                <value>
                    <fullName>Labor - Service</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Stock Receipt (Restocking)</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Non Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Skill_Broad__c</fullName>
        <label>Skill Broad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Docks</fullName>
                </value>
                <value>
                    <fullName>Doors</fullName>
                </value>
                <value>
                    <fullName>Fence &amp; Gates</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>General Maintenance</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>MHE</fullName>
                </value>
                <value>
                    <fullName>Planned Maintenance</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Site Survey</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Target_Object_Record_Type__c</fullName>
        <label>Target Object Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UNITY_Target_Object__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ccccc</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Project Phase</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Site Survey</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Usage Request</fullName>
                </value>
                <value>
                    <fullName>Customer Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Target_Object__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>OrderItem</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>UNITY_Proposal_Line_Item__c</fullName>
                </value>
                <value>
                    <fullName>UNITY_Proposal__c</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Template_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Parent</label>
        <referenceTo>UNITY_Template_Configuration__c</referenceTo>
        <relationshipLabel>Templates Configuration</relationshipLabel>
        <relationshipName>Templates_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Top_Level_Templates</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Template_Parent__c</field>
            <operation>equals</operation>
        </filters>
        <label>Top Level Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates Configuration</pluralLabel>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <description>Record Type for Service Requests</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Asset</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Project</fullName>
        <active>true</active>
        <description>Record Type for Projects</description>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Proposal</fullName>
        <active>true</active>
        <description>Record Type for Proposals</description>
        <label>Proposal</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Purchase_Order</fullName>
        <active>true</active>
        <description>Record Type for Purchase Orders</description>
        <label>Purchase Order</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>